--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <title>Werewolf Online - Ultimate V6</title>
+    <title>Werewolf Online</title>
     
     <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@300;400;600;700;900&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
@@ -77,7 +77,7 @@
     <div id="screen-login" class="screen show-screen items-center justify-center p-6">
         <div class="glass-panel p-8 md:p-10 rounded-[2rem] w-full max-w-sm text-center">
             <h1 class="text-5xl font-black text-transparent bg-clip-text bg-gradient-to-br from-red-500 to-orange-500 mb-2 drop-shadow-[0_0_15px_rgba(239,68,68,0.5)]">WEREWOLF</h1>
-            <p class="text-slate-400 mb-8 font-semibold tracking-widest uppercase text-sm">ปัจฉิมบำรุงรื่น V6</p>
+            <p class="text-slate-400 mb-8 font-semibold tracking-widest uppercase text-sm">ควยหนู</p>
             <input type="text" id="playerNameInput" placeholder="กรอกชื่อนักเรียน..." class="w-full mb-6 px-4 py-4 bg-slate-900 border border-slate-700 rounded-xl focus:border-red-500 outline-none text-center text-xl font-bold text-white transition-all shadow-inner">
             <button id="btnSaveName" class="btn-primary py-4">เข้าสู่หมู่บ้าน</button>
         </div>
@@ -89,7 +89,7 @@
                 <div class="flex items-center gap-3">
                     <div class="w-11 h-11 bg-indigo-600 rounded-full flex items-center justify-center text-xl shadow-inner border border-indigo-400">🧑‍🎓</div>
                     <div>
-                        <p class="text-[0.65rem] text-slate-400 font-bold uppercase tracking-widest mb-0.5">นักเรียนปัจฉิม</p>
+                        <p class="text-[0.65rem] text-slate-400 font-bold uppercase tracking-widest mb-0.5">ส้นตีน</p>
                         <p id="displayPlayerName" class="font-bold text-white text-lg leading-none truncate max-w-[150px] md:max-w-[250px]"></p>
                     </div>
                 </div>
@@ -524,3 +524,4 @@
     </script>
 </body>
 </html>
+
